- Git specific: renamed branch "master" to "main". Please update your development environments to use the new branch name by using the following commands:   ```   git branch -m master main   git fetch origin   git branch -u origin/main main   git remote set-head origin -a   ```  - GitHub specific: Started using GitHub Releases for checking for and providing updates.  - The app can now update itself using GitHub's Releases function. From now on, each new update is going to be published with its own release.     At every app start, the app is going to check for a new release, and if found, it's going to display a red update link in the top bar of the main menu, which when pressed, will display a prompt containing the new app version and the changelog displayed in Markdown, thanks to the [JPro Platform](https://github.com/JPro-one/jpro-platform), and it will offer the options to update, open the project's GitHub page to download the source code manually, or not update.  - Rolled back a change made in the update published on the 15.09.2023 and added an animation speed for closing the main menu prompts, even though they just disappear upon closing, to make the main menu buttons accessible right after the prompts are closed.  - Increased visibility of the scroll pane's scroll bars' thumbs in dark mode and changed their colour in light mode.  - Made the main menu scroll panes white in light mode, so they have the same colour as the rest of the prompt.  - Renamed UserSettings.txt to Properties.txt to reflect the fact that the file holds settings and other app properties (exchange rates).  - Set the font family of the interpretations on the analysis page to be the same as the one throughout the app (Calibri).  - Set the cursor to be an open hand when hovering over the top bar of any window and a closed hand when the user clicks and holds the title bar to move it someplace else, to indicate that that area can be sed to move the app window. Also, made the splash screen draggab